# ptp-fast-event-consumer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deployment.yaml
src/: main.rs
static/: index.html
